--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: https://3ddp.github.io # the base hostname & protocol for your site, e.g. h
 github_username: 3ddP
 
 # Set this to a github repository to be used to host comments.
-github_comments_repository:  3ddP/sigmasense-comment
+github_comments_repository:  3ddP/sigmasense-comments
 
 # Build settings
 
